<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a21639999.mrfox.LoginActivity"
    android:background="#F0802D">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/nombreLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtNombre"/>

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/contraseniaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtCont" />

        <Button
            android:layout_marginTop="80dp"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEntrar"
            android:background="@drawable/boton_iniciar"
            android:onClick="continuar"/>
    </LinearLayout>

</RelativeLayout>
